[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/RAVIE.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://shared/back/back_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=4]
[ext_resource path="res://artiphonie/memory/memory_game.gd" type="Script" id=5]
[ext_resource path="res://assets/theme/backgroundPanel.tres" type="StyleBox" id=6]
[ext_resource path="res://shared/instruction/instruction.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 1 )

[node name="memory_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.00102794
anchor_top = 0.0333333
anchor_right = 1.00103
anchor_bottom = 0.153333
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.843137, 0.411765, 0.211765, 1 )
text = "Jeu du Memory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="Control" parent="."]
anchor_left = 0.05
anchor_top = 0.194
anchor_right = 0.95
anchor_bottom = 0.95
margin_top = 0.319992
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Panel" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0.32549 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridCards" type="GridContainer" parent="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 7.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="TimerMinute" type="Label" parent="."]
anchor_left = 0.819284
anchor_top = 0.0421053
anchor_right = 0.956003
anchor_bottom = 0.102105
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.152941, 0, 1 )
text = "0 minutes"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TimerSeconde" type="Label" parent="."]
anchor_left = 0.817434
anchor_top = 0.0997368
anchor_right = 0.961965
anchor_bottom = 0.144737
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.152941, 0, 1 )
text = "0 secondes"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="back_button" parent="." instance=ExtResource( 3 )]

[node name="Instruction" parent="." instance=ExtResource( 7 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
